home page comlete

--- a/index.html
+++ b/index.html
@@ -142,47 +142,264 @@
                     </div>
                 </div>
             </section>
+            <section class="faq-section">
+                <div class="container">
+                    <div class="faq-flex">
+                        <div class="faq-img-area">
+                            <img src="images/faq-bg-img.png" alt="Saturday Lotto FAQ Image">
+                        </div>
+                        <div class="faq-context">
+                            <div class="faq-title-part">
+                                <small>Our Advantages</small>
+                                <h2>Why Choose Saturday Lotto?</h2>
+                            </div>
+                            <div class="faq-part">
+                                <ul>
+                                    <li>
+                                        <h3>1. Convenience and Simplicity</h3>
+                                        <p>We’ve designed a platform that makes participating in lotteries effortless. Buy tickets, check results, and track upcoming draws anytime, anywhere, from any device.</p>
+                                    </li>
+                                    <li>
+                                        <h3>2. Reliability and Transparency</h3>
+                                        <p>Saturday Lotto operates under a government-issued license, ensuring secure and fair lottery draws. We adhere to the highest standards of transparency and integrity.</p>
+                                    </li>
+                                    <li>
+                                        <h3>3. Better Odds of Winning</h3>
+                                        <p>Our players enjoy fair conditions and real chances to win. Every ticket is a step closer to your dream!</p>
+                                    </li>
+                                    <li>
+                                        <h3>3. Better Odds of Winning</h3>
+                                        <p>Our players enjoy fair conditions and real chances to win. Every ticket is a step closer to your dream!</p>
+                                    </li>
+                                    <li>
+                                        <h3>4. Fast and Friendly Support</h3>
+                                        <p>Our dedicated support team is available 24/7 to assist you. Have questions? We’re always here to help.</p>
+                                    </li>
+                                    <li>
+                                        <h3>5. Loyalty Program</h3>
+                                        <p>We value our players! Earn bonuses, discounts, and exclusive offers for actively participating in draws.</p>
+                                    </li>
+                                    <li>
+                                        <h3>6. Modern and Secure Platform</h3>
+                                        <p>Our website is built with cutting-edge technology to ensure a seamless experience. Your data is always protected with advanced encryption.</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="review-section">
+                <div class="container">
+                    <div class="review-title">
+                        <h2>USERS REVIEW</h2>
+                    </div>
+                    <div class="review-slider-container">
+                        <div class="review-slider-flex" id="reviewSlider">
+                            <div class="review-card">
+                                <ul>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                </ul>
+                                <p>Saturday Lotto's a fun weekly ritual. Small investment, big dreams. Always a thrill!</p>
+                            </div>
+                            <div class="review-card">
+                                <ul>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                </ul>
+                                <p>Great experience, will definitely play again. Fingers crossed for a big win!</p>
+                            </div>
+                            <div class="review-card">
+                                <ul>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star-black.png" alt="Star Icon"></li>
+                                </ul>
+                                <p>Exciting and fun! Winning is rare, but it’s always worth the shot.</p>
+                            </div>
+                            <div class="review-card">
+                                <ul>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                    <li><img src="images/star.png" alt="Star Icon"></li>
+                                </ul>
+                                <p>Thrilling and enjoyable! Winning doesn’t happen often, but it’s always worth taking the chance.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider-button">
+                        <div class="button-pre" id="prevBtn"></div>
+                        <div class="button-next" id="nextBtn"></div>
+                    </div>
+                </div>
+            </section>
+            <section class="responsibile-section">
+                <div class="container">
+                    <div class="game-bg">
+                        <div class="gaming-title">
+                            <h2>Responsible Gaming</h2>
+                        </div>
+                        <div class="game-flex">
+                            <div class="game-context">
+                                <h3>Make Informed Choices</h3>
+                                <p>Your well-being is our priority. If you need support or guidance regarding gambling, reach out to Gambling Help at 1800 858 858 or visit GambleAware online at gambleaware.nsw.gov.au.</p>
+                                <h3>About BetStop</h3>
+                                <p>BetStop is Australia’s official National Self-Exclusion Register, offering a free and confidential service for individuals who wish to exclude themselves from all licensed online wagering providers. For more information and to access this service, visit betstop.gov.au.</p>
+                                <h3>Make Informed Choices</h3>
+                                <p>Your well-being is our priority. If you need support or guidance regarding gambling, reach out to Gambling Help at 1800 858 858 or visit GambleAware online at gambleaware.nsw.gov.au.</p>
+                            </div> <div class="game-context">
+                                <h3>Licensed and Regulated</h3>
+                                <p>Saturday Lotto operates under the authority of a license issued by the Australian Government Department and complies with local laws and regulations established by the Australian Gambling Commission. We are committed to maintaining the highest standards of integrity and responsible gambling practices.</p>
+                                <h3>Make Informed Choices</h3>
+                                <p>Your well-being is our priority. If you need support or guidance regarding gambling, reach out to Gambling Help at 1800 858 858 or visit GambleAware online at gambleaware.nsw.gov.au.</p>
+                                <ul>
+                                    <li>
+                                        <a href="">
+                                            <img src="images/f-logo-1.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            <img src="images/f-logo-2.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            <img src="images/f-logo-3.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            <img src="images/f-logo-4.png" alt="">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
+        <footer class="footer-section">
+            <div class="container">
+                <div class="contact-flex">
+                    <div class="footer-logo">
+                        <img src="images/saturday-logo.png" alt="Saturday Lotto Logo">
+                    </div>
+                    <div class="useful-links">
+                        <h3 class="footer-title-h3">Legal & Regulatory</h3>
+                        <ul>
+                            <li>
+                                <a href="terms.html">Terms and Conditions</a>
+                            </li>
+                            <li>
+                                <a href="privacy-policy.html">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="cookie-policy.html">Cookie Policy</a>
+                            </li>
+                            <li>
+                                <a href="responsible-gaming.html">Responsible Gambling</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-brands">
+                        <h3 class="footer-title-h3">brands</h3>
+                        <ul>
+                            <li><img src="images/brand-1.png"></li>
+                            <li><img src="images/brand-2.png"></li>
+                            <li><img src="images/brand-3.png"></li>
+                            <li><img src="images/brand-4.png"></li>
+                            <li><img src="images/brand-5.png"></li>
+                            <li><img src="images/brand-6.png"></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p>Copyright 2025 Saturday Lotto Game | All Rights Resereved.</p>
+                </div>
+            </div>
+        </footer>
+
         <script>
             document.addEventListener("DOMContentLoaded", function () {
-    function startCountdown(duration) {
-        const hoursEl = document.querySelector(".time-content:nth-child(1) h3");
-        const minutesEl = document.querySelector(".time-content:nth-child(2) h3");
-        const secondsEl = document.querySelector(".time-content:nth-child(3) h3");
+                function startCountdown(duration) {
+                    const hoursEl = document.querySelector(".time-content:nth-child(1) h3");
+                    const minutesEl = document.querySelector(".time-content:nth-child(2) h3");
+                    const secondsEl = document.querySelector(".time-content:nth-child(3) h3");
 
-        let endTime = localStorage.getItem("countdownEndTime");
-        if (!endTime) {
-            endTime = Date.now() + duration * 1000;
-            localStorage.setItem("countdownEndTime", endTime);
-        } else {
-            endTime = parseInt(endTime);
-        }
+                    let endTime = localStorage.getItem("countdownEndTime");
+                    if (!endTime) {
+                        endTime = Date.now() + duration * 1000;
+                        localStorage.setItem("countdownEndTime", endTime);
+                    } else {
+                        endTime = parseInt(endTime);
+                    }
 
-        function updateCountdown() {
-            let remainingTime = Math.max(0, Math.floor((endTime - Date.now()) / 1000));
-            let hours = Math.floor(remainingTime / 3600);
-            let minutes = Math.floor((remainingTime % 3600) / 60);
-            let seconds = remainingTime % 60;
+                    function updateCountdown() {
+                        let remainingTime = Math.max(0, Math.floor((endTime - Date.now()) / 1000));
+                        let hours = Math.floor(remainingTime / 3600);
+                        let minutes = Math.floor((remainingTime % 3600) / 60);
+                        let seconds = remainingTime % 60;
 
-            hoursEl.textContent = hours.toString().padStart(2, '0');
-            minutesEl.textContent = minutes.toString().padStart(2, '0');
-            secondsEl.textContent = seconds.toString().padStart(2, '0');
+                        hoursEl.textContent = hours.toString().padStart(2, '0');
+                        minutesEl.textContent = minutes.toString().padStart(2, '0');
+                        secondsEl.textContent = seconds.toString().padStart(2, '0');
 
-            if (remainingTime > 0) {
-                setTimeout(updateCountdown, 1000);
-            } else {
-                localStorage.removeItem("countdownEndTime");
-            }
-        }
+                        if (remainingTime > 0) {
+                            setTimeout(updateCountdown, 1000);
+                        } else {
+                            localStorage.removeItem("countdownEndTime");
+                        }
+                    }
 
-        updateCountdown();
-    }
+                    updateCountdown();
+                }
 
-    // Set countdown duration (e.g., 47 hours, 59 minutes, 10 seconds)
-    let countdownDuration = (47 * 3600) + (59 * 60) + 10;
-    startCountdown(countdownDuration);
-});
-
+                // Set countdown duration (e.g., 47 hours, 59 minutes, 10 seconds)
+                let countdownDuration = (47 * 3600) + (59 * 60) + 10;
+                startCountdown(countdownDuration);
+            });
         </script>
+        <script>
+            let currentIndex = 0;
+                const reviews = document.getElementById("reviewSlider");
+                const totalReviews = document.querySelectorAll(".review-card").length;
+                const slidesToShow = window.innerWidth <= 768 ? 1 : window.innerWidth <= 1024 ? 2 : 3;
+
+                function updateSlider() {
+                    const slideWidth = document.querySelector(".review-card").offsetWidth;
+                    reviews.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
+                }
+
+                document.getElementById("nextBtn").addEventListener("click", () => {
+                    if (currentIndex < totalReviews - slidesToShow) {
+                        currentIndex++;
+                    } else {
+                        currentIndex = 0;
+                    }
+                    updateSlider();
+                });
+
+                document.getElementById("prevBtn").addEventListener("click", () => {
+                    if (currentIndex > 0) {
+                        currentIndex--;
+                    } else {
+                        currentIndex = totalReviews - slidesToShow;
+                    }
+                    updateSlider();
+                });
+            </script>
     </body>
 </html>
