--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
+        <header class="header-section">
             <div class="warning-top-bar">
                 <p><img src="images/waring-top-bar.png" alt="18+ Restriction Logo">Accessible only persons aged 18 and over. Please gamble responsibly.</p>
             </div>
             <div class="container">
                 <div class="header-menu">
                     <div class="header-logo">
-                        <a href="">
+                        <a href="/">
                             <img src="images/saturday-logo.png" alt="Saturday Lotto Logo">
                         </a>
                     </div>
@@ -258,7 +258,8 @@
                                 <p>BetStop is Australia’s official National Self-Exclusion Register, offering a free and confidential service for individuals who wish to exclude themselves from all licensed online wagering providers. For more information and to access this service, visit betstop.gov.au.</p>
                                 <h3>Make Informed Choices</h3>
                                 <p>Your well-being is our priority. If you need support or guidance regarding gambling, reach out to Gambling Help at 1800 858 858 or visit GambleAware online at gambleaware.nsw.gov.au.</p>
-                            </div> <div class="game-context">
+                            </div> 
+                            <div class="game-context">
                                 <h3>Licensed and Regulated</h3>
                                 <p>Saturday Lotto operates under the authority of a license issued by the Australian Government Department and complies with local laws and regulations established by the Australian Gambling Commission. We are committed to maintaining the highest standards of integrity and responsible gambling practices.</p>
                                 <h3>Make Informed Choices</h3>
