--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
                         }
                         .popup-left {
                             width: 50%;
-                            background: url('/images/register-bg.png') center/cover;
+                            background: url('./images/register-bg.png') center/cover;
                             background-position: 85% 50%;
                         }
                         .popup-left-login {
                             width: 50%;
-                            background: url('/images/login-bg.png') center/cover;
+                            background: url('./images/login-bg.png') center/cover;
                             background-position: 85% 50%;
                             min-height: 550px;
                         }
