--- a/responsible-gaming.html
+++ b/responsible-gaming.html
@@ -141,12 +141,12 @@
                         }
                         .popup-left {
                             width: 50%;
-                            background: url('/images/register-bg.png') center/cover;
+                            background: url('images/register-bg.png') center/cover;
                             background-position: 85% 50%;
                         }
                         .popup-left-login {
                             width: 50%;
-                            background: url('/images/login-bg.png') center/cover;
+                            background: url('images/login-bg.png') center/cover;
                             background-position: 85% 50%;
                             min-height: 550px;
                         }
